new-routes-type-users
Criação, das rotas referente ao type users, controllers, services, factories e test's
